2-test-lbc-with-alb-ingress/email-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-deployment
  namespace: test-alb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: email
      type: back-end
  template:
    metadata:
      labels:
        app: email
        type: back-end
    spec:
      containers:
        - name: email-service
          image: leonardorothier/email-service:v1
          ports:
            - containerPort: 8080
