2-test-lbc-with-alb-ingress/email-site-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-site-deployment
  namespace: test-alb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: email
      type: front-end
  template:
    metadata:
      labels:
        app: email
        type: front-end
    spec:
      containers:
        - name: email-site
          image: leonardorothier/email-site:v3
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
