2-test-lbc-with-alb-ingress/email-service.yml
apiVersion: v1
kind: Service
metadata:
  name: email-service
  namespace: test-alb
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: email
    type: back-end
