2-test-lbc-with-alb-ingress/email-site-service.yml
apiVersion: v1
kind: Service
metadata:
  name: email-site-service
  namespace: test-alb
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
  selector:
    app: email
    type: front-end
